.env.template added, changed README.md, changed name TEST_MODE to DEMO_MODE

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - POSTGRES_HOST=twitter_db
       - POSTGRES_PORT=${POSTGRES_PORT}
       - FASTAPI_PORT=${FASTAPI_PORT}
-      - TEST_MODE=${TEST_MODE}
+      - DEMO_MODE=${DEMO_MODE}
     ports:
       - "${FASTAPI_PORT}:${FASTAPI_PORT}"
     volumes:
